--- a/interface/css/main.css
+++ b/interface/css/main.css
@@ -9,6 +9,7 @@ body,
 
 .text-info {
     font-family: 'Raleway', sans-serif;
+    letter-spacing: 3px;
 }
 
 #status-info {
@@ -20,6 +21,7 @@ body,
     background: #000;
     border-radius: 5px;
     border: 4px solid #C6C6C6;
+    transition: 0.4s;
 }
 
 #status-info > .line {
