--- a/interface/css/main.css
+++ b/interface/css/main.css
@@ -7,7 +7,6 @@ body,
     background: #1a2333;
 }
 
-
 .cl-red {
     color: #F00;
 }
@@ -77,7 +76,6 @@ body,
     border-radius: 50%;
     box-shadow: 0px 0px 20px #F00;
     cursor: pointer;
-    transition: 0.4s;
 }
 
 .threat {
@@ -163,9 +161,16 @@ body,
     background: #F00;
     font-size: 20px;
     text-align: center;
+    cursor: pointer;
 }
 
-.cam-list{
+.cam-title:hover {
+    text-decoration: underline
+}
+
+/* camera list */
+
+.cam-list {
     z-index: 99999;
     width: 25%;
     height: 100%;
